# games-crimson

./: COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.CoMET  README.bi2cf  THANKS  TODO  configure  configure.ac  crimson.desktop  crimson.spec.in
doc/: Makefile.am  Makefile.in  bi2cf.6  bi2cf.xml  cfed.6  cfed.xml  comet.6  comet.xml  crimson.6  crimson.css  crimson.xml
gfx/: Makefile.am  Makefile.in
levels/: Anthill.src  ArmsRace.src  Baptism.src  BeachRaid.src  ClippedWings.src  Foxhole.src  General.src  GreatBattle.src  HeavyMetal.src  IslandHoppers.src  LakeYukarwa.src  LankhValley.src  LostFactories.src  Makefile.am  Makefile.in  MountainDefense.src  OmyarGorge.src  Plowshares.src  RadioSilence.src  Revelation.src  Tutorial1.src  Tutorial2.src  Tutorial3.src  Uprising.src
locale/: Makefile.am  Makefile.in  de.tmpl  en.tmpl  fr.tmpl  hu.tmpl  it.tmpl  pl.tmpl  sk.tmpl  sr.tmpl  tr.tmpl
music/: COPYING.MUSIC  Makefile.am  Makefile.in  default.mid
sfx/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/cf/: Makefile.am  Makefile.in  ai.cpp  ai.h  building.cpp  building.h  combat.cpp  combat.h  container.cpp  container.h  event.cpp  event.h  game.cpp  game.h  history.cpp  history.h  initwindow.cpp  initwindow.h  main.cpp  map.cpp  map.h  mapwindow.cpp  mapwindow.h  mission.cpp  mission.h  msgs.h  network.cpp  network.h  options.cpp  options.h  path.cpp  path.h  platform.cpp  platform.h  player.cpp  player.h  unit.cpp  unit.h  unitwindow.cpp  unitwindow.h
src/comet/: Makefile.am  Makefile.in  building.cpp  building.h  edwindow.cpp  edwindow.h  eventwindow.cpp  eventwindow.h  extwindow2.cpp  extwindow2.h  gfxwidget.cpp  gfxwidget.h  main.cpp  main.h  map.cpp  map.h  mapgen.cpp  mapgen.h  mission.cpp  mission.h  msgs.h  uiaux.cpp  uiaux.h  unit.cpp  unit.h
src/common/: SDL_zlib.c  SDL_zlib.h  button.cpp  button.h  color.h  extwindow.cpp  extwindow.h  fileio.cpp  fileio.h  filewindow.cpp  filewindow.h  font.cpp  font.h  gamedefs.h  gamewindow.cpp  gamewindow.h  globals.h  hexsup.cpp  hexsup.h  lang.cpp  lang.h  list.cpp  list.h  listselect.cpp  listselect.h  lset.cpp  lset.h  mapview.cpp  mapview.h  mapwidget.cpp  mapwidget.h  misc.cpp  misc.h  rect.cpp  rect.h  slider.cpp  slider.h  sound.cpp  sound.h  strutil.cpp  (+11 more)
tools/: Makefile.am  Makefile.in  bi2cf.c  bi2cf.h  bi_data.c  bidd1_data.c  bidd2_data.c  cf2bmp.cpp  cfed.cpp  default.tsrc  default.usrc  hl_data.c  mkdatafile.cpp  mklocale.cpp  mksurface.cpp  mksurface.h  mktileset.cpp  mkunitset.cpp  parser.cpp  parser.h
